# rust_wasm_canvas

./: Cargo.toml  cottage_1.mtl  wasm_build.bash
src/: geometry.rs  inputs.rs  js_bindings.rs  lib.rs  life.rs  m3.rs  m4.rs  maths_utils.rs  rendering.rs  rigidbody.rs  spin.rs  transform.rs  util.rs  world_object.rs  world_state.rs
src/game/: blocks.rs  cottage_scene.rs  mod.rs  rotate_with_mouse.rs
src/mesh/: wavefront_obj.rs
src/shader_config/: mod.rs  vertex_color_3d.rs  vertex_shader_config.yaml
src/spin/: test.rs
src/steppables/: mod.rs  steppable.rs
www/: package-lock.json  package.json  webpack.config.js
www/src/: get_mouse.js  index.html  index.js  index.scss  shader_comp.js
www/src/glsl_shaders/: colourized_fs.glsl  fragment_shader.glsl  ortho_3d_vs.glsl  vertex_shader.glsl
