[package]
name = "js_canvas"
version = "0.1.0"
authors = ["CrystalSplitter <gamewhizzit@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "^0.4.0"
itertools = "^0.10.0"
wasm-bindgen = "^0.2.63"
nalgebra = "^0.26.2"
console_error_panic_hook = { version = "0.1.6" }
js-sys = "^0.3.50"
serde-wasm-bindgen = "^0.1.3"
once_cell = "^1.7.2"
wavefront_obj = "^10.0.0"
dyn-clone = "^1.0.4"

# Consider removing, as wee_alloc is slow.
wee_alloc = { version = "0.4.5", optional = true }

# For actual game
rand = "0.8.0"
getrandom = {features = ["js"]}

[dependencies.web-sys]
version = "^0.3.50"
features = [
    "Document",
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "MouseEvent",
    "Node",
    "WebGl2RenderingContext",
    "WebGlActiveInfo",
    "WebGlProgram",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "WebGlBuffer",
    "Window",
    "console",
]

[profile.release]
# Optimise for code size.
opt-level = "s"

