[package]
name = "js_canvas"
version = "0.1.0"
authors = ["CrystalSplitter <gamewhizzit@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "^0.4.1"
futures = "^0.3"
itertools = "^0.10.0"
wasm-bindgen = { version = "^0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "^0.4"
# Can't be higher than 0.26 due to rust-analyzer warning.
nalgebra = "~0.25"
console_error_panic_hook = { version = "0.1.6" }
js-sys = "^0.3.64"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde-wasm-bindgen = "^0.1.3"
once_cell = "^1.7.2"
wavefront_obj = "^10.0.0"
dyn-clone = "^1.0.4"
slab = "^0.4.3"
typed-builder = "0.9.0"

# Consider removing, as wee_alloc is slow.
wee_alloc = { version = "0.4.5", optional = true }

# For actual game
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }

[dependencies.web-sys]
version = "^0.3.50"
features = [
    "Document",
    "DomRect",
    "Element",
    "Headers",
    "HtmlCanvasElement",
    "MouseEvent",
    "Node",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WebGl2RenderingContext",
    "WebGlActiveInfo",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "Window",
    "console",
]

[profile.release]
# Optimise for code size.
opt-level = "s"
debug = true
